# mediaplayerctl

./: .gitignore  CMakeLists.txt  README.md
src/: mediaplayerctl.cpp
